[package]
name = "degrees"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0.136", features = ["derive"]}
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11.9" }
serde_json = { version = "1.0" }